# gc-memory

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  INSTRUCTIONS.md  README.md  RESEARCH_JOURNEY.md  paper.tex  pyproject.toml  release-please-config.json
.cargo/: config.toml
.claude-plugin/: marketplace.json
.github/workflows/: build-binaries.yml  release-artifacts-check.yml  release-homebrew.yml  release-npm.yml  release-please.yml  release-pypi.yml  release-rust.yml  release.yml
arxiv/: README.md  paper.tex
benchmarks/: bench_int8.py  run_benchmark.py  run_bm25_tokenizer.py  run_lifecycle_benchmark.py  run_rif_benchmark.py  run_rif_clustered.py  run_rif_enriched.py  run_rif_explore.py  run_rif_explore_smart.py  run_rif_explore_threshold.py  run_rif_explore_validation.py  run_rif_extended_metrics.py  run_rif_gap.py  run_rif_sweep.py
benchmarks/results/: BENCHMARKS_BM25_TOKENIZER.md  bench_deep_pass.md
crates/lethe-claude-code/: Cargo.toml
crates/lethe-cli/: Cargo.toml  README.md
crates/lethe-cli/src/: main.rs  paths.rs
crates/lethe-cli/src/commands/: config.rs  expand.rs  index.rs  migrate.rs  mod.rs  projects.rs  reset.rs  search.rs  status.rs  store_helpers.rs  tui.rs
crates/lethe-core/: Cargo.toml
crates/lethe-node/: Cargo.toml  README.md  index.js  package-lock.json  package.json
crates/lethe-node/src/: lib.rs
crates/lethe-py/: Cargo.toml  README.md  pyproject.toml
crates/lethe-py/src/: lib.rs
crates/lethe-tui/: Cargo.toml
crates/lethe-tui/src/: app.rs  lib.rs  main.rs  search_worker.rs
demo/: README.md
demo/scripts/: _pass_replay.py  collect_replay.py  collect_replay_warm.py  extend_replay.py
experiments/: data_prep.py  enrich_longmemeval.py  run_experiment.py
gc_mutation/: README.md  baselines.py  run_experiment.py  segmentation.py  store.py
legacy/: pyproject.toml
legacy/lethe/: __init__.py
legacy/scripts/: enrich_longmemeval.py  prep_longmemeval.py
migration_benchmarks/: README.md  _lib.py  components.py  latency.py  longmemeval.py
plugins/claude-code/: README.md
plugins/codex/: README.md  install.sh
release_artifacts/: lethe-linux-arm64.node  lethe-linux-x64.node  lethe-macos-arm64.node  lethe-windows-arm64.node  lethe-windows-x64.node  lethe_memory-0.11.0-cp39-abi3-macosx_11_0_arm64.whl  lethe_memory-0.12.0-cp39-abi3-macosx_11_0_arm64.whl  lethe_memory-0.12.0-cp39-abi3-win_amd64.whl  lethe_memory-0.12.0-cp39-abi3-win_arm64.whl  lethe_memory-0.7.0-cp39-abi3-macosx_11_0_arm64.whl  lethe_memory-0.7.0-cp39-abi3-win_amd64.whl  lethe_memory-0.7.0-cp39-abi3-win_arm64.whl  lethe_memory-0.9.0-cp39-abi3-macosx_11_0_arm64.whl
research/gc_mutation/: baselines.py  run_experiment.py  segmentation.py  store.py
research_playground/baseline/: README.md
research_playground/bm25_tokenizer/: README.md
research_playground/deep_pass/: README.md
research_playground/gc_mutation/: README.md  run_experiment.py
research_playground/int8/: README.md
research_playground/late_chunking_modal/: README.md  prep_late.py
research_playground/lethe_reference/: README.md  pyproject.toml
research_playground/lifecycle/: README.md
research_playground/rif/: README.md
research_playground/rust_migration/: README.md  (+5 more)
scripts/: enrich_longmemeval.py
tests/: conftest.py  test_cli.py  test_db.py  test_dedup.py  test_enrichment.py  test_entry.py  test_graph.py  test_markdown_store.py  test_memory_store.py  test_metrics.py  test_mlp_adapter.py  test_reranker.py  test_rif.py  test_segmentation.py  test_store.py  test_vectors.py
video_playground/: .gitignore  README.md
(+65 files in other folders)
