[package]
name = "lethe-node"
version = "0.1.0"
edition = "2021"
rust-version = "1.94"
description = "Node.js bindings for lethe-core via napi-rs."
license = "MIT"
repository = "https://github.com/teimurjan/lethe"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
lethe-core = { path = "../lethe-core" }
napi = { version = "2.16", default-features = false, features = ["napi4", "tokio_rt"] }
napi-derive = "2.16"
tokio = { workspace = true }

[build-dependencies]
napi-build = "2.1"

[lints]
workspace = true
