[package]
name = "lethe-tui"
version = "0.1.0"
edition = "2021"
rust-version = "1.94"
description = "Terminal UI for lethe (Rust port, ratatui)."
license = "MIT"
repository = "https://github.com/teimurjan/lethe"
publish = false

[[bin]]
name = "lethe-tui"
path = "src/main.rs"

[dependencies]
lethe-core = { path = "../lethe-core" }
ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true

[lints]
workspace = true
